CA1/Codes/gen/main/grammar/FunctionCraftParser.java
// Generated from E:/Semester 6/Design Compiler And Programming Languages/CA/1/FunctionCraft/src/main/grammar/FunctionCraft.g4 by ANTLR 4.13.1
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FunctionCraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, LPAR=2, RPAR=3, LBRACKET=4, RBRACKET=5, LBRACE=6, RBRACE=7, DQUATE=8, 
		ARROW=9, COLON=10, SEMICOLON=11, COMMA=12, DEF=13, END=14, MAIN=15, RETURN=16, 
		IF=17, ELSE=18, ELSEIF=19, TRUE=20, FALSE=21, CHOP=22, CHOMP=23, PUSH=24, 
		PUTS=25, METHOD=26, LEN=27, PATTERN=28, MATCH=29, NEXT_IF=30, BREAK_IF=31, 
		NEXT=32, BREAK=33, LOOP=34, DO=35, FOR=36, IN=37, PLUS=38, MINUS=39, MULTIPLY=40, 
		DIVIDE=41, REMAINDER=42, DECREMENT=43, INCREMENT=44, ASSIGN=45, GREATER_THAN=46, 
		LESS_THAN=47, LESS_EQUAL=48, GREATER_EQUAL=49, AND=50, OR=51, NOT=52, 
		SINGLE_DOT=53, DOUBLE_DOT=54, APPEND=55, PLUS_ASSIGN=56, MINUS_ASSIGN=57, 
		MULTIPLY_ASSIGN=58, DIVIDE_ASSIGN=59, REMAINDER_ASSIGN=60, EQUAL=61, NOT_EQUAL=62, 
		IDENTIFIER=63, FLOAT=64, INTEGER=65, STRING=66, MULTILINE_COMMENT=67, 
		SINGLELINE_COMMENT=68, WS=69;
	public static final int
		RULE_program = 0, RULE_tab_or = 1, RULE_comment = 2, RULE_number = 3, 
		RULE_bool = 4, RULE_function_pointer = 5, RULE_inc_dec_operator = 6, RULE_plus_minus_operator = 7, 
		RULE_assign_operator = 8, RULE_assignment = 9, RULE_append = 10, RULE_append_prime = 11, 
		RULE_or = 12, RULE_or_prime = 13, RULE_and = 14, RULE_and_prime = 15, 
		RULE_equality = 16, RULE_equality_prime = 17, RULE_comparison = 18, RULE_comparison_prime = 19, 
		RULE_add_sub = 20, RULE_add_sub_prime = 21, RULE_mul_div_mod = 22, RULE_mul_div_mod_prime = 23, 
		RULE_not_neg = 24, RULE_inc_dec = 25, RULE_bracket = 26, RULE_parentheses = 27, 
		RULE_value = 28, RULE_list = 29, RULE_elements = 30, RULE_indexing = 31, 
		RULE_range = 32, RULE_puts = 33, RULE_push = 34, RULE_len = 35, RULE_chop = 36, 
		RULE_chomp = 37, RULE_do_loop = 38, RULE_for = 39, RULE_break_next = 40, 
		RULE_if = 41, RULE_if_in_loop = 42, RULE_statement = 43, RULE_pattern = 44, 
		RULE_match = 45, RULE_function = 46, RULE_lambda_function = 47, RULE_main = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "tab_or", "comment", "number", "bool", "function_pointer", 
			"inc_dec_operator", "plus_minus_operator", "assign_operator", "assignment", 
			"append", "append_prime", "or", "or_prime", "and", "and_prime", "equality", 
			"equality_prime", "comparison", "comparison_prime", "add_sub", "add_sub_prime", 
			"mul_div_mod", "mul_div_mod_prime", "not_neg", "inc_dec", "bracket", 
			"parentheses", "value", "list", "elements", "indexing", "range", "puts", 
			"push", "len", "chop", "chomp", "do_loop", "for", "break_next", "if", 
			"if_in_loop", "statement", "pattern", "match", "function", "lambda_function", 
			"main"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'    |'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'\"'", "'->'", 
			"':'", "';'", "','", "'def'", "'end'", "'main'", "'return'", "'if'", 
			"'else'", "'elseif'", "'true'", "'false'", "'chop'", "'chomp'", "'push'", 
			"'puts'", "'method'", "'len'", "'pattern'", "'match'", "'next if'", "'break if'", 
			"'next'", "'break'", "'loop'", "'do'", "'for'", "'in'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'--'", "'++'", "'='", "'>'", "'<'", "'<='", "'>='", 
			"'&&'", "'||'", "'!'", "'.'", "'..'", "'<<'", "'+='", "'-='", "'*='", 
			"'/='", "'%='", "'=='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "LPAR", "RPAR", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", 
			"DQUATE", "ARROW", "COLON", "SEMICOLON", "COMMA", "DEF", "END", "MAIN", 
			"RETURN", "IF", "ELSE", "ELSEIF", "TRUE", "FALSE", "CHOP", "CHOMP", "PUSH", 
			"PUTS", "METHOD", "LEN", "PATTERN", "MATCH", "NEXT_IF", "BREAK_IF", "NEXT", 
			"BREAK", "LOOP", "DO", "FOR", "IN", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
			"REMAINDER", "DECREMENT", "INCREMENT", "ASSIGN", "GREATER_THAN", "LESS_THAN", 
			"LESS_EQUAL", "GREATER_EQUAL", "AND", "OR", "NOT", "SINGLE_DOT", "DOUBLE_DOT", 
			"APPEND", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULTIPLY_ASSIGN", "DIVIDE_ASSIGN", 
			"REMAINDER_ASSIGN", "EQUAL", "NOT_EQUAL", "IDENTIFIER", "FLOAT", "INTEGER", 
			"STRING", "MULTILINE_COMMENT", "SINGLELINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionCraft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionCraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<PatternContext> pattern() {
			return getRuleContexts(PatternContext.class);
		}
		public PatternContext pattern(int i) {
			return getRuleContext(PatternContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(101);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case DEF:
						{
						setState(98);
						function();
						}
						break;
					case PATTERN:
						{
						setState(99);
						pattern();
						}
						break;
					case MULTILINE_COMMENT:
					case SINGLELINE_COMMENT:
						{
						setState(100);
						comment();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(106);
			main();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MULTILINE_COMMENT || _la==SINGLELINE_COMMENT) {
				{
				{
				setState(107);
				comment();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tab_orContext extends ParserRuleContext {
		public Tab_orContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tab_or; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterTab_or(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitTab_or(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitTab_or(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tab_orContext tab_or() throws RecognitionException {
		Tab_orContext _localctx = new Tab_orContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tab_or);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommentContext extends ParserRuleContext {
		public TerminalNode SINGLELINE_COMMENT() { return getToken(FunctionCraftParser.SINGLELINE_COMMENT, 0); }
		public TerminalNode MULTILINE_COMMENT() { return getToken(FunctionCraftParser.MULTILINE_COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentContext comment() throws RecognitionException {
		CommentContext _localctx = new CommentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_la = _input.LA(1);
			if ( !(_la==MULTILINE_COMMENT || _la==SINGLELINE_COMMENT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(FunctionCraftParser.INTEGER, 0); }
		public TerminalNode FLOAT() { return getToken(FunctionCraftParser.FLOAT, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitNumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_la = _input.LA(1);
			if ( !(_la==FLOAT || _la==INTEGER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(FunctionCraftParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(FunctionCraftParser.FALSE, 0); }
		public BoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitBool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolContext bool() throws RecognitionException {
		BoolContext _localctx = new BoolContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bool);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_pointerContext extends ParserRuleContext {
		public TerminalNode METHOD() { return getToken(FunctionCraftParser.METHOD, 0); }
		public TerminalNode LPAR() { return getToken(FunctionCraftParser.LPAR, 0); }
		public TerminalNode COLON() { return getToken(FunctionCraftParser.COLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FunctionCraftParser.IDENTIFIER, 0); }
		public TerminalNode RPAR() { return getToken(FunctionCraftParser.RPAR, 0); }
		public Function_pointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_pointer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunction_pointer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunction_pointer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunction_pointer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_pointerContext function_pointer() throws RecognitionException {
		Function_pointerContext _localctx = new Function_pointerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_pointer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(METHOD);
			setState(122);
			match(LPAR);
			setState(123);
			match(COLON);
			setState(124);
			match(IDENTIFIER);
			setState(125);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Inc_dec_operatorContext extends ParserRuleContext {
		public TerminalNode INCREMENT() { return getToken(FunctionCraftParser.INCREMENT, 0); }
		public TerminalNode DECREMENT() { return getToken(FunctionCraftParser.DECREMENT, 0); }
		public Inc_dec_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inc_dec_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterInc_dec_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitInc_dec_operator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitInc_dec_operator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Inc_dec_operatorContext inc_dec_operator() throws RecognitionException {
		Inc_dec_operatorContext _localctx = new Inc_dec_operatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inc_dec_operator);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INCREMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				match(INCREMENT);
				System.out.println("Operator: ++");
				}
				break;
			case DECREMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(DECREMENT);
				System.out.println("Operator: --");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Plus_minus_operatorContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(FunctionCraftParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(FunctionCraftParser.MINUS, 0); }
		public Plus_minus_operatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plus_minus_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterPlus_minus_operator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitPlus_minus_operator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitPlus_minus_operator(this);
			else return visitor.visitChildren(this);
		}
	}
